UniversityCollege_cssCleanup/skin.css
/** 
 * -------------------------------------------
 * Theme: University College
 * Version: 0.1
 * Author: Bhargav Anand Annavajhala
 * Website: http://www.whoisandie.com
 hi
 * -------------------------------------------
 **/
/** 
 * -------------------------------------------
 * All Webfonts included here (_webfonts.scss)
 * -------------------------------------------
 **/
@font-face {
  font-family: 'ChunkFive';
  src: url("fonts/Chunkfive-webfont.eot");
  src: url("fonts/Chunkfive-webfont.eot?#iefix") format("embedded-opentype"), url("fonts/Chunkfive-webfont.woff") format("woff"), url("fonts/Chunkfive-webfont.ttf") format("truetype"), url("fonts/Chunkfive-webfont.svg#ChunkFiveRegular") format("svg");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: UbuntuMedIt;
  src: url("fonts/real/Ubuntu/Ubuntu/Ubuntu-MediumItalic.eot");
  src: url("fonts/real/Ubuntu/Ubuntu/Ubuntu-MediumItalic.eot?#iefix") format("embedded-opentype"), url("fonts/real/Ubuntu/Ubuntu/Ubuntu-MediumItalic.ttf");
}

@font-face {
  font-family: UbuntuIt;
  src: url("fonts/real/Ubuntu/Ubuntu/Ubuntu-Italic.eot");
  src: url("fonts/real/Ubuntu/Ubuntu/Ubuntu-Italic.eot?#iefix") format("embedded-opentype"), url("fonts/real/Ubuntu/Ubuntu/Ubuntu-Italic.ttf");
}

@font-face {
  font-family: Oswald;
  src: url("fonts/Oswald/Oswald-Regular.eot");
  src: url("fonts/Oswald/Oswald-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/Oswald/Oswald-Regular.ttf");
}

/** 
 * -------------------------------------------
 * Module Specific CSS
 * -------------------------------------------
 **/
.repository_content table {
  width: 100%;
  border: none !important;
}

table#dnn_ctr11279_Repository_HeaderTable td table:first-child, table#dnn_ctr11279_Repository_HeaderTable td td:last-child.breadcrumb {
  display: none;
}
table#dnn_ctr11279_Repository_HeaderTable table td {
  padding: 15px !important;
}
table#dnn_ctr11279_Repository_HeaderTable select {
  width: 150px !important;
}

table#dnn_ctr11279_Repository_DataTable {
  margin-top: 10px;
  background: #fff;
}
table#dnn_ctr11279_Repository_DataTable table {
  padding: 20px;
}
table#dnn_ctr11279_Repository_DataTable table td {
  padding: 0 !important;
}
table#dnn_ctr11279_Repository_DataTable table span.RepositoryTitle {
  font-size: 18px;
}

table#dnn_ctr11279_Repository_FooterTable {
  margin-top: 10px;
}

/** 
 * -------------------------------------------
 * Reset CSS
 * -------------------------------------------
 **/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}

body {
  line-height: 1;
}

ol, ul {
  list-style: none;
  list-style-position: outside;
  list-style-type: circle;
}

blockquote, q {
  quotes: none;
}

blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

/** 
 * -------------------------------------------
 * Base CSS
 * -------------------------------------------
 **/
body {
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 1;
  font: 13px Arial, Helvetica, sans-serif;
  color: #444444;
  background: #121212;
  position: relative;
  overflow-y: scroll;
}

ol, ul {
  list-style: none;
}

strong {
  font-weight: bold;
}

em {
  font-style: italic;
}

a:link, a:visited, a:active {
  color: #7d110c;
}
a:hover {
  color: #990000;
}

::-webkit-selection {
  color: #f8f3d2;
  background: #7d110c;
}

::-moz-selection {
  color: #f8f3d2;
  background: #7d110c;
}

::-o-selection {
  color: #f8f3d2;
  background: #7d110c;
}

::selection {
  color: #f8f3d2;
  background: #7d110c;
}

.left {
  float: left;
}

.right {
  float: right;
  width: 175px;
}

.hide-element {
  display: none;
}

.container {
  width: 960px;
  margin: 0 auto;
  padding: 0 40px;
  zoom: 1;
}
.container:before, .container:after {
  content: "\0020";
  display: block;
  height: 0;
  overflow: hidden;
}
.container:after {
  clear: both;
}

.ControlPanel, .PagingTable {
  min-width: 1040px;
}

#dnn_ctr9573_SiteSettings_UP > table {
  width: inherit;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}

div.cta {
  width: 100%;
  margin: 5px 0;
  padding: 10px 0;
  float: left;
  zoom: 1;
}
div.cta:before, div.cta:after {
  content: "\0020";
  display: block;
  height: 0;
  overflow: hidden;
}
div.cta:after {
  clear: both;
}
div.cta:hover {
  opacity: 0.9;
}

a.cta {
  font-family: ChunkFive, "Arial Black";
  text-transform: uppercase;
  display: inline-block;
  text-decoration: none;
  font-size: 11pt;
  height: 40px;
  background: url("img/cta-bg.png");
  line-height: 42px;
  float: left;
}

a.cta:link, a.cta:visited {
  color: #f8f3d2;
  text-shadow: #4b1210 0 1px;
}

span.cta {
  width: 12px;
  height: 40px;
  float: left;
}

span.cta-before {
  background: url("img/cta-bg-left.png");
}

span.cta-after {
  background: url("img/cta-bg-right.png");
}

/** 
 * -------------------------------------------
 * Typography CSS
 * -------------------------------------------
 **/
h1, h2, h3, h4, h5 {
  font-family: Georgia, "Times New Roman", serif;
  font-weight: normal;
}

h1 {
  text-transform: uppercase;
  font-size: 9pt;
  padding: 0 0 6px 0;
}

h2 {
  font-size: 18pt;
  margin: 2px 0 7px;
}
/* ... */

